# edge-rm

./: .gitignore  .gitmodules  .travis.yml  README.md  messages.proto  setup.py
agent/: How to build OpenThread with Zephyr.md
agent/c/: .gitignore  Makefile  main.c
agent/c_lib/: README.md  agent_library.c  agent_library.h  agent_port.h
agent/cpp_lib/: README.md  agent_library.c  agent_library.h  agent_port.h
agent/particle/: README.md  project.properties
agent/python/: Dockerfile  README.md  agent.py  config.yaml  db.py  dockerhelper.py  messages_pb2.py  requirements.txt  run_client_local.sh  run_local.sh  wasmhelper.py
agent/zephyr/: .gitignore  README.md  west.yml
agent/zephyr/app/: CMakeLists.txt  README.md  overlay-ot.conf  prf_nrf52840_dk.conf
agent/zephyr/app/boards/: permamote.overlay
agent/zephyr/app/boards/arm/permamote/: Kconfig  Kconfig.board  Kconfig.defconfig  board.cmake  permamote.dts  permamote.yaml  permamote_defconfig
agent/zephyr/app/src/: API.h  agent_port.c  agent_wasm_runtime.c  agent_wasm_runtime.h  coap_help.c  coap_help.h  config.h  convert.py  fac.c  main.c  test_wasm.h  wasm_runtime_api.c  wasm_runtime_api.h
backend/: package-lock.json  package.json  server.js  tasks.json
backend/html/: index.html
docker-pi/: Dockerfile  README.md
docker/camera/: Dockerfile  build.sh  hello.sh  push.sh
docker/classify/: Dockerfile  classify.sh  run.sh
docker/coapserver/: Dockerfile  client.js  package-lock.json  push.sh  server.js
docker/dummy/: build.sh  run_enter.sh
docker/server/: build.sh  server.js
docs/: deployment.md  resource-attributes.md
edgerm/: framework.py  messages_pb2.py
frameworks/assemblyscript-test/: .gitignore  README.md  asconfig.json  package-lock.json  package.json
k8s/: agent1-config.yml  deployment-agent.yml  deployment-central.yml  namespace-edge-rm.yml
node-agent/: index.js
node-master/: index.js  package.json
proto/: README.txt  gen_node.sh  gen_py.sh  messages.proto  messages_pb2.py
scheduler/: ddflow-scheduler.py  framework.py  kill-task.py  messages_pb2.py  new-scheduler.py  run_kill_local.py  run_scheduler_local.py  scheduler.py  scheduler_kill.py  scheduler_library.py  sensor-scheduler.py  task.json  tasks.json
systemd/: README.md  edge-rm-agent.service
test/: .gitignore  test.py  test_http_ping.py  test_offer.py  test_task.py
wasm/: wasm_runtime_api.h
(+613 files in other folders)
